<resources>
    <string name="app_name">NUMAD22Sp_XueBai</string>
    <string name="about_me">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed: - </string>
    <string name="add_link">add link</string>
    <string name="link_collector">Link Collector</string>
    <string name="get_location">Get Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="current_location">Current Location</string>
    <string name="press_the_button_get_a_random_dog">Press the button. Get a random dog!</string>
    <string name="random">Random</string>
    <string name="photo_of_a_random_dog">Photo of a random dog</string>
    <string name="web_service">Web Service</string>
</resources>