<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="Hello World!"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:background="#00F4FF"
        android:clickable="true"
        android:text="@string/about_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnClicky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clicky_clicky"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnWebService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLocation"
        app:layout_constraintStart_toStartOf="@+id/btnLocation"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/get_location"
        app:layout_constraintEnd_toEndOf="@+id/btnLinkCollector"
        app:layout_constraintStart_toStartOf="@+id/btnLinkCollector"
        app:layout_constraintTop_toBottomOf="@+id/btnLinkCollector" />

    <Button
        android:id="@+id/btnLinkCollector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/link_collector"
        app:layout_constraintEnd_toEndOf="@+id/btnClicky"
        app:layout_constraintStart_toStartOf="@+id/btnClicky"
        app:layout_constraintTop_toBottomOf="@+id/btnClicky" />

</androidx.constraintlayout.widget.ConstraintLayout>